--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
 
             <div class="flex flex-row gap-3 mt-4">
-              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors">
+              <a href="#" class="button-primary">
                 Create a Professional Account
               </a>
-              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
+              <a href="#" class="button-secondary">
                 Visit Wigmore Pharmacy
               </a>
             </div>
@@ -116,10 +116,10 @@
                             <p class="text-brand-light max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
                           </div>
                           <div class="shrink-0">
-                            <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
+                            <a href="#" class="button-tertiary-icon">
                               Read More
-                              <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
-                                <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+                              <span>
+                                <span class="icon-arrow"></span>
                               </span>
                             </a>
                           </div>
@@ -168,10 +168,10 @@
                       <p class="text-brand-light">We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor. Thank you so much for your continued support!</p>
                     </div>
                     <div class="shrink-0">
-                      <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
-                        Join Now
-                        <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
-                          <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+                      <a href="#" class="button-tertiary-icon">
+                        View offers
+                        <span>
+                          <span class="icon-arrow"></span>
                         </span>
                       </a>
                     </div>
