--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <!-- SECTION: image text CTAs -->
     <div class="card-container bg-brand-light">
       <div class="card-container-inner">
-        <div class="flex flex-row justify-between gap-6">
-          <div class="w-1/2 flex flex-col gap-4 items-start justify-center md:pr-12">
+        <div class="flex md:flex-row flex-col justify-between gap-6">
+          <div class="md:w-1/2 flex flex-col gap-4 items-start justify-center md:pr-12">
             <div class="badge-primary">Welcome to Wigmore Medical</div>
-            <h1 class="heading-primary text-4xl">
+            <h1 class="heading-primary md:text-4xl text-2xl">
               A Secure Platform for Medical and Aesthetic Professionals
             </h1>
             <div class="prose">
@@ -43,7 +43,7 @@
               <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
             </div>
 
-            <div class="flex flex-row gap-3">
+            <div class="flex md:flex-row flex-col gap-3 md:w-auto w-full">
               <a href="#" class="button-primary">
                 Create a Professional Account
               </a>
@@ -52,8 +52,8 @@
               </a>
             </div>
           </div>
-          <div class="w-1/2">
-            <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-9/10 object-cover rounded-3xl">
+          <div class="md:w-1/2">
+            <img src="/assets/placeholder-jennie.png" alt="" class="w-full md:aspect-9/10 aspect-5/4 object-cover md:rounded-2xl rounded-xl">
           </div>
         </div>
       </div>
@@ -73,12 +73,18 @@
       x-data="{ cards: 4 }"
       x-init="$nextTick(() => {
         new Swiper($refs.swiper, {
-          slidesPerView: 2,
-          spaceBetween: 24,
+          slidesPerView: 1.1,
+          spaceBetween: 16,
           navigation: {
             nextEl: $refs.next,
             prevEl: $refs.prev,
           },
+          breakpoints: {
+            1028: {
+              slidesPerView: 2,
+              spaceBetween: 24,
+            }
+          }
         })
       })"
       class="card-container bg-brand-light"
@@ -87,7 +93,7 @@
         <div class="flex flex-col items-start justify-between gap-6">
           <div class="max-w-xl flex flex-col gap-4 items-start mb-4">
             <div class="badge-primary">Professional Aesthetic Education</div>
-            <h1 class="heading-primary text-4xl">Training & Webinars</h1>
+            <h1 class="heading-primary md:text-4xl text-2xl">Training & Webinars</h1>
             <p>Join industry-leading educators for in-depth training and live webinars focused on safe practice, and the evolving landscape of medical aesthetics</p>
           </div>
         </div>
@@ -101,7 +107,7 @@
             </button>
 
             <!-- Swiper Container -->
-            <div x-ref="swiper" class="swiper flex-1 overflow-hidden">
+            <div x-ref="swiper" class="swiper flex-1 overflow-hidden right-overflow-visible-lg">
               <div class="swiper-wrapper">
                 <template x-for="(item, index) in cards" :key="index">
                   <!-- Card -->
@@ -110,14 +116,14 @@
                       class="relative aspect-5/4 rounded-2xl overflow-hidden bg-cover bg-center"
                       style="background-image: url('/assets/placeholder-jennie.png');"
                     >
-                      <div class="absolute inset-0 bg-linear-to-t from-black/90 via-black/20 to-transparent"></div>
-                      <div class="absolute inset-0 p-8 flex flex-col justify-end">
-                        <div class="flex items-end justify-between gap-6">
+                      <div class="absolute inset-0 md:bg-linear-to-t bg-linear-to-b from-black/90 via-black/20 to-transparent"></div>
+                      <div class="absolute inset-0 md:p-8 p-4 flex flex-col justify-end">
+                        <div class="flex h-full md:h-auto md:flex-row flex-col md:items-end items-start justify-between gap-6">
                           <div class="flex flex-col gap-2 max-w-80">
-                            <h2 class="heading-primary text-3xl text-brand-light">Training Courses</h2>
+                            <h2 class="heading-primary md:text-3xl text-2xl text-brand-light">Training Courses</h2>
                             <p class="text-brand-light max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
                           </div>
-                          <div class="shrink-0">
+                          <div class="shrink-0 md:w-auto w-full">
                             <a href="#" class="button-tertiary-icon">
                               Read More
                               <span>
@@ -151,7 +157,7 @@
         <div class="flex flex-col items-center justify-between gap-6">
           <div class="max-w-lg flex flex-col gap-4 items-center text-center mb-4">
             <div class="badge-primary">Award Winning service</div>
-            <h1 class="heading-primary text-4xl">Award Winning Distributors</h1>
+            <h1 class="heading-primary md:text-4xl text-2xl">Award Winning Distributors</h1>
             <p>We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor.</p>
           </div>
         </div>
@@ -160,16 +166,16 @@
           <div class="flex items-center gap-4">
             <div class="flex-1 overflow-hidden">
               <div
-                class="relative aspect-10/4 rounded-2xl overflow-hidden bg-cover bg-center"
+                class="relative md:aspect-10/4 aspect-5/4 rounded-2xl overflow-hidden bg-cover bg-center"
                 style="background-image: url('/assets/placeholder-jennie.png');"
               >
-                <div class="absolute inset-0 bg-linear-to-t from-black/90 via-black/20 to-transparent"></div>
-                <div class="absolute inset-0 p-8 flex flex-col justify-end">
-                  <div class="flex items-end justify-between gap-6">
+                <div class="absolute inset-0 md:bg-linear-to-t bg-linear-to-b from-black/90 via-black/20 to-transparent"></div>
+                <div class="absolute inset-0 md:p-8 p-4 flex flex-col md:justify-end">
+                  <div class="flex h-full md:h-auto md:flex-row flex-col md:items-end items-start justify-between gap-6">
                     <div class="flex flex-col gap-2 max-w-120">
                       <p class="text-brand-light">We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor. Thank you so much for your continued support!</p>
                     </div>
-                    <div class="shrink-0">
+                    <div class="shrink-0 md:w-auto w-full">
                       <a href="#" class="button-tertiary-icon">
                         View offers
                         <span>
